sec_flshcrds.css
@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');

body {
    background-color: black;
}

#hLogo1 {
    max-width: 15%;
    height: auto;
}

#mainContentHolder {
    background-color: black;
    display: flex;
    flex-direction: column;
    margin: 0;
    /* min-height: 100vh; */
}

#displayArea {
    display: flex;
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    background-color: black;
    /* visibility: hidden; */
}

#flashCardGameContainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    visibility: hidden;
    width: 100%;
}

#title1 {
    color: white;
    font-family: "Share Tech", sans-serif;
    font-size: 3em;
    margin: .5em 0 .5em 0;
}

#head {
    display: flex;
    flex-direction: column;
    align-items: center;
    border-bottom: 3px solid white;
    
}

#topicSelection {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.topic {
    color: white;
    font-family: "Share Tech", sans-serif;
    margin-top: .25em;
    font-size: 1em;
}

#tTitle {
    color: black;
    font-family: "Share Tech", sans-serif;
    text-shadow: 
        0 0 10px #fff,
        0 0 20px rgb(187, 0, 255),
        0 0 40px rgb(0, 132, 255);
    margin: 10px 0 2px 0;

}

.divider {
    color: white;
    font-family: "Share Tech", sans-serif;
    margin-top: .25em;
    font-size: 1em;
}

.topic:hover {
    cursor: pointer;
}

#flashCard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 55%;
    min-height: 35vh;
    background-color: rgb(0, 111, 170);
    /* visibility: hidden; */
    margin-top: .5em;
    box-shadow: 
        0 0 10px #fff,
        0 0 20px rgb(187, 0, 255),
        0 0 40px rgb(0, 132, 255);
}

#options {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    font-family: "Share Tech", sans-serif;
    font-size: 1rem;
    color: white;
    margin: 0 1em 0 1em;
    width: 55%;
    /* visibility: hidden; */
}

#next:hover {
    cursor: pointer;
}

#show:hover {
    cursor: pointer;
}

.acronyms {
    font-family: "Share Tech", sans-serif;
    font-size: 4.5rem;
    text-align: center;
    margin: .5rem .5rem .5rem .5rem;
}

.answer{
    font-family: "Share Tech", sans-serif;
    font-size: 2.5rem;
    text-align: center;
    margin: .5rem 0 .5rem 0;
}

.purpose {
    font-family: "Share Tech", sans-serif;
    font-size: 1.5rem;
    text-align: center;
    margin: .5rem .5rem .5rem .5rem;

}

#topicHead {
    font-family: "Share Tech", sans-serif;
    font-size: 2rem;
    text-align: center;
    margin: .25em 0 .25em 0;
    color: white;
}

#acronymAttemptLabel {
    font-family: "Share Tech", sans-serif;
    font-size: 1.5rem;
    text-align: center;
    margin: .25em 0 .25em 0;
    color: white;
}

#acronymAttempt {
    font-family: "Share Tech", sans-serif;
}

#acronymAttemptFull {
    font-family: "Share Tech", sans-serif;
}

#purposeAttempt {
    font-family: "Share Tech", sans-serif;
}

#footer {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#hLogo2 {
    max-width: 5%;
    height: auto;
}

#copyright {
    font-family: "Share Tech", sans-serif;
    color: white;
}

#selectTopic {
    display: flex;
    flex-direction: row;
    visibility: visible;
}

#selectTopicText {
    font-family: "Share Tech", sans-serif;
    color: white;
}


/* styling for the scoring container */
#scoringContainer {
    width: 100%;
}

#explanationContainer {
    display: flex;
    flex-direction: row;
    justify-content: center;
    border-bottom: 1px solid white;
    border-top: 1px solid white;
}

#explanation {
    font-family: "Share Tech", sans-serif;
    color: white;
    margin-bottom: 5px;
    margin-top: 5px;
}

#scoreDetailsContainer {
    width: 100%;
    display: flex;
    flex-direction: row;
}

#totalScore {
    width: 50%;
    height: 50vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    border-right: 1px solid white;
    border-bottom: 1px solid white;
    margin-bottom: 10vh;    
}

#scoreDetails {
    display: flex;
    flex-direction: column;
    width: 50%;
    height: 50vh;
    border-left: 1px solid white;
    border-bottom: 1px solid white;
    margin-bottom: 10vh;
    
}

#scoreDetailsHeader {
    display: flex;
    flex-direction: row;
    justify-content: center;
    border-bottom: 1px solid white;
}

#ttlScoreHeader {
    display: flex;
    flex-direction: row;
    justify-content: center;
    border-bottom: 1px solid white;
    width: 100%;
}

#scrDetailsTitle {
    font-family: "Share Tech", sans-serif;
    color: white;
    margin: 5px 0 5px 0;
}

#ttlScoreTitle {
    font-family: "Share Tech", sans-serif;
    color: white;
    margin: 5px 0 5px 0;
}

#score {
    font-family: "Share Tech", sans-serif;
    color: white;
    font-size: 3em;
    margin-bottom: 5px;
    margin-top: 5px;
}

#rule {
    font-family: "Share Tech", sans-serif;
    color: white;
    font-size: .75em;
    text-align: center;
}

#scoreContainer {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#scoreHolder {
    width: 50%;
    text-align: center;
}

.scoreOutcomeC {
    font-family: "Share Tech", sans-serif;
    color: rgb(38, 248, 0);
    font-size: 1em;
}

.scoreOutcomeW {
    font-family: "Share Tech", sans-serif;
    color: rgb(252, 206, 0);
    font: 1em;
}

#detailsHolder {
    width: 100%;
    height: 100%;
}

#detailsContainerHolder {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

.custom-scrollbar {
    --scrollbar-track-color: black;
}

#detailsContainer {
    width: 50%;
    height: 75%;
    overflow-y: scroll;
    &::-webkit-scrollbar {
        width: 5px;
        height: 5px;
    }
    &::-webkit-scrollbar-track {
        background-color: var(--scrollbar-track-color);
    }
    white-space: pre-line;
}

#pracTestLink {
    font-family: "Share Tech", sans-serif;
    color: white;
    margin-bottom: 0;
    margin-top: 25px;
}

a:link {
    color: rgb(178, 63, 236);
    text-decoration: none;
}

